--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,8 @@
-streamlit
-sentence-transformers
+streamlit==1.35.0
+sentence-transformers==3.0.1
+xgboost==2.1.2
+torch==2.2.0
+scikit-learn==1.5.0
+numpy==1.26.4
+pandas==2.2.2
+transformers==4.41.0
